--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,11 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.13.2'
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+        classpath 'com.android.tools.build:gradle:1.2.3'
+    }
+}
+allprojects {
+    repositories {
+        jcenter()
     }
 }
